# mbg-sentiment-analysis

./: .gitignore  Dockerfile.mlflow  Makefile  README.md  docker-compose.yaml  github_actions_dvc  github_actions_dvc.pub  prebucket.sh  pyproject.toml
app/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  config.py  database.py  endpoints.py  inference.py  logging_config.py  middleware.py  model_loader.py  models.py  pyproject.toml  requirements.txt
model/: .env.example  .gitignore  SCRIPTS_USAGE.md  pyproject.toml  requirements.txt
model/.dvc/: config
model/configs/: config.yaml
model/data/processed/: .gitignore  mbg_combined.csv.dvc  test.csv  val.csv
model/data/raw/: mbg_agt_LATEST.old.csv  mbg_apr_LATEST.csv  mbg_feb-oct.csv  mbg_feb_LATEST.csv  mbg_januari.csv  mbg_januari_LATEST.csv  mbg_july_LATEST.csv  mbg_june_LATEST.csv  mbg_mar_LATEST.csv  mbg_may_LATEST.csv  mbg_oct_LATEST.csv  mbg_oct_LATEST_2.csv  mbg_sept_LATEST.csv  mbg_sept_LATEST_2.csv
model/data/weekly/: mbg.csv.dvc
model/scripts/: add_label_column.py  evaluate.py  merge_weekly_data.py  model_registry.py  preprocess_data.py  train.py
model/src/cleaning/: add_unlabeled_column.py  clean_text.py  cleaned_text.py  merge_csv.py
model/src/data/: labeling.py  preprocessing.py
model/src/data_merge/: weekly_merge.py
model/src/evaluation/: evaluator.py
model/src/labelling/: auto_label.py
model/src/mlops/: model_registry.py
model/src/model_training/: evaluate.py  predict.py  pull_latest_model.py  push_to_mlflow.py  split_train_test.py  train_indobertweet.py
(+43 files in other folders)
